books/programming-interview/java/CH17 하이버네이트 사용하.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH17 하이버네이트 사용하.md
+++ b/books/programming-interview/java/CH17 하이버네이트 사용하.md
@@ -37,15 +37,10 @@ hibernate-mapping-3.0.dtd">
 			jdbc:mysql://localhost:3306/ticket
 		<property>
 		<property name="connection.username">name<property>
-		<property name="connection.username">name<property>
-
-<class name="Person" table="PEOPLE">
-	<id name="id" column="ID"/>
-	<property name="name">
-	...
-</class>
-</hibernate-mapping>
-
+		<property name="connection.password">password<property>
+		<mapping resource="com. ... Person.hbm.xml" />
+	</session-factory>
+</hibernate-configuration>
 
 ```
 
@@ -53,7 +48,7 @@ hibernate-mapping-3.0.dtd">
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NDUzMTc2MDgsLTE5MzA1OTM2ODksOD
-k1MzI5ODEwLC0xMTU4Mjc1NDg0LC0xNTQzMzI4NTg3LDE2Mzg0
-MDk2MzAsMTc5MjYzOTgxMiw3MzA5OTgxMTZdfQ==
+eyJoaXN0b3J5IjpbMTA5NjE4NzU3NCwtMTkzMDU5MzY4OSw4OT
+UzMjk4MTAsLTExNTgyNzU0ODQsLTE1NDMzMjg1ODcsMTYzODQw
+OTYzMCwxNzkyNjM5ODEyLDczMDk5ODExNl19
 -->
