books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -1,10 +1,10 @@
 # Maven(메이븐 )
 
-
+사용하기 좋은 애플리케이션을 만드는 데는 자바 소스 코드를 작성하는 것 이외에도 훨씬 많은 부분을 고려해야 한다. 왜냐하면 애플리케이션은 여러 가지 생산물, XML 설정, 환경 지정 속성, 이미지, 다른 언어를 위해 내장된 코드등으로 구성된다. 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4NTc5MTQzNV19
+eyJoaXN0b3J5IjpbMTEzMTMwMDE3OF19
 -->
