--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -2,9 +2,14 @@
 
 사용하기 좋은 애플리케이션을 만드는 데는 자바 소스 코드를 작성하는 것 이외에도 훨씬 많은 부분을 고려해야 한다. 왜냐하면 애플리케이션은 여러 가지 생산물, XML 설정, 환경 지정 속성, 이미지, 다른 언어를 위해 내장된 코드등으로 구성된다. 
 
+프로젝트의 자원을 모두 하나로 합치는 데 집중하는 애플리케이션인 메이븐을 살펴본다. 
+
+>Maven이란 무엇인가?
+
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEzMTMwMDE3OF19
+eyJoaXN0b3J5IjpbMzU2MTg0MzczXX0=
 -->
