books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -5,11 +5,12 @@
 프로젝트의 자원을 모두 하나로 합치는 데 집중하는 애플리케이션인 메이븐을 살펴본다. 
 
 >Maven이란 무엇인가?
+>메이븐은 프로젝트 전체를 포괄하는 빌드 도구로, 자바 프로젝트를 컴파일, 테스트, 배포하는데 사용된다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbMzQzNDMzNjMyLDM1NjE4NDM3M119
 -->
