--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -5,12 +5,15 @@
 프로젝트의 자원을 모두 하나로 합치는 데 집중하는 애플리케이션인 메이븐을 살펴본다. 
 
 >Maven이란 무엇인가?
->메이븐은 프로젝트 전체를 포괄하는 빌드 도구로, 자바 프로젝트를 컴파일, 테스트, 배포하는데 사용된다. 
+>메이븐은 프로젝트 전체를 포괄하는 빌드 도구로, 자바 프로젝트를 컴파일, 테스트, 배포하는데 사용된다. 애플리케이션일 구동하는데 필요한 자원들을 어디서 찾아야하는지 파악해 여러 빌드 작업을 수행한다. 
+
+
+대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQzNDMzNjMyLDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
 -->
