books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -8,12 +8,13 @@
 >메이븐은 프로젝트 전체를 포괄하는 빌드 도구로, 자바 프로젝트를 컴파일, 테스트, 배포하는데 사용된다. 애플리케이션일 구동하는데 필요한 자원들을 어디서 찾아야하는지 파악해 여러 빌드 작업을 수행한다. 
 
 
-대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 
+대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 메이븐은 이를 빌드해야하는 정의를 갖고 있다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbLTEwMjQzMjk0OTIsLTEyOTA0NjU0NjcsMz
+U2MTg0MzczXX0=
 -->
