--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -8,13 +8,15 @@
 >메이븐은 프로젝트 전체를 포괄하는 빌드 도구로, 자바 프로젝트를 컴파일, 테스트, 배포하는데 사용된다. 애플리케이션일 구동하는데 필요한 자원들을 어디서 찾아야하는지 파악해 여러 빌드 작업을 수행한다. 
 
 
-대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 메이븐은 이를 어
+대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 메이븐은 이를 어떻게 빌드해야하는지 알고 있다.
+
+복잡합 애플리케이션은 JUnit, 아파치 commons, Guava등 여러 라이브러리에 의존성을 가지고 있다. 메이븐은 의존성을 정의할 수 있고 , 인터넷상의 www.maven.org같은 저장소나 Artifactory, Nexus 등을 이용해서 회사 내부에 설치한 저장소에 필요한 JAR
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTI2NzU2MjY3LC0xMDI0MzI5NDkyLC0xMj
-kwNDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTE1NjY0MDUzNCwtMTAyNDMyOTQ5MiwtMT
+I5MDQ2NTQ2NywzNTYxODQzNzNdfQ==
 -->
