--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -10,13 +10,15 @@
 
 대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 메이븐은 이를 어떻게 빌드해야하는지 알고 있다.
 
-복잡합 애플리케이션은 JUnit, 아파치 commons, Guava등 여러 라이브러리에 의존성을 가지고 있다. 메이븐은 의존성을 정의할 수 있고 , 인터넷상의 www.maven.org같은 저장소나 Artifactory, Nexus 등을 이용해서 회사 내부에 설치한 저장소에 필요한 JAR
+복잡합 애플리케이션은 JUnit, 아파치 commons, Guava등 여러 라이브러리에 의존성을 가지고 있다. 메이븐은 의존성을 정의할 수 있고 , 인터넷상의 www.maven.org같은 저장소나 Artifactory, Nexus 등을 이용해서 회사 내부에 설치한 저장소에서 관리하는 필요한 JAR 파일을 직접 다운로드할 수 있다.
+
+메이븐의 프로그인 시스템은 빌드에 특정 연산을 추가해서 가능하게 한다. 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjY0MDUzNCwtMTAyNDMyOTQ5MiwtMT
-I5MDQ2NTQ2NywzNTYxODQzNzNdfQ==
+eyJoaXN0b3J5IjpbLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLT
+EyOTA0NjU0NjcsMzU2MTg0MzczXX0=
 -->
