books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -12,7 +12,9 @@
 
 복잡합 애플리케이션은 JUnit, 아파치 commons, Guava등 여러 라이브러리에 의존성을 가지고 있다. 메이븐은 의존성을 정의할 수 있고 , 인터넷상의 www.maven.org같은 저장소나 Artifactory, Nexus 등을 이용해서 회사 내부에 설치한 저장소에서 관리하는 필요한 JAR 파일을 직접 다운로드할 수 있다.
 
-메이븐의 플러그인 시스템은 빌드에 특정 연산을 추가해서 가능하게 한다. 의존성 설정과 비슷하게 이 플러그인들은 원격으로 제공되며, 메이븐은 빌드할 때 이들을 찾을 수 있다. 또한 플러그인이 제공하는 연산이 무엇이든 실항 할 수 있다. 일반적인 플러그인의 예를 maven-jetty-
+메이븐의 플러그인 시스템은 빌드에 특정 연산을 추가해서 가능하게 한다. 의존성 설정과 비슷하게 이 플러그인들은 원격으로 제공되며, 메이븐은 빌드할 때 이들을 찾을 수 있다. 또한 플러그인이 제공하는 연산이 무엇이든 실항 할 수 있다. 일반적인 플러그인의 예를 maven-jetty-plugin인데, 현재 빌드를 웹어플리케이션 형태로 실행한다. 
+
+실행을 하기위한 작업의 특정 단위를 골(Goal)이라고 한다. 특정 골은 compile, test, install 같은 빌드 생명주기의 상태에 따라 구분된다. 예를 들어 mvn compile이라는 명령을 실행할 때는 실제로 compiler 플
 
 
 
@@ -21,6 +23,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTEwMTkzMDc3LC0xMzkzOTk3NzczLC0xMD
-I0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTMzMzkzMzk5NiwtMTM5Mzk5Nzc3MywtMT
+AyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNzNdfQ==
 -->
