--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -14,7 +14,13 @@
 
 메이븐의 플러그인 시스템은 빌드에 특정 연산을 추가해서 가능하게 한다. 의존성 설정과 비슷하게 이 플러그인들은 원격으로 제공되며, 메이븐은 빌드할 때 이들을 찾을 수 있다. 또한 플러그인이 제공하는 연산이 무엇이든 실항 할 수 있다. 일반적인 플러그인의 예를 maven-jetty-plugin인데, 현재 빌드를 웹어플리케이션 형태로 실행한다. 
 
-실행을 하기위한 작업의 특정 단위를 골(Goal)이라고 한다. 특정 골은 compile, test, install 같은 빌드 생명주기의 상태에 따라 구분된다. 예를 들어 mvn compile이라는 명령을 실행할 때는 실제로 compiler 플
+실행을 하기위한 작업의 특정 단위를 골(Goal)이라고 한다. 특정 골은 compile, test, install 같은 빌드 생명주기의 상태에 따라 구분된다. 예를 들어 mvn compile이라는 명령을 실행할 때는 실제로 compiler 플러그 인의 compile을 실행하는 것이다. 
+
+> 메이븐을 사용하려면 프로젝트를 어떻게 구성해야 하는가?
+
+## 메이븐 빌드의 기본 디렉터리 구조
+
+## 메이븐 빌드의 생명주기 
 
 
 
@@ -23,6 +29,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzMzkzMzk5NiwtMTM5Mzk5Nzc3MywtMT
+eyJoaXN0b3J5IjpbLTgwNzY0MTI0OSwtMTM5Mzk5Nzc3MywtMT
 AyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNzNdfQ==
 -->
