--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -16,11 +16,15 @@
 
 실행을 하기위한 작업의 특정 단위를 골(Goal)이라고 한다. 특정 골은 compile, test, install 같은 빌드 생명주기의 상태에 따라 구분된다. 예를 들어 mvn compile이라는 명령을 실행할 때는 실제로 compiler 플러그 인의 compile을 실행하는 것이다. 
 
-> 메이븐을 사용하려면 프로젝트를 어떻게 구성해야 하는가?
 
 ## 메이븐 빌드의 기본 디렉터리 구조
 
+> 메이븐을 사용하려면 프로젝트를 어떻게 구성해야 하는가?
+
+
 ## 메이븐 빌드의 생명주기 
+
+## 메이븐 애플리케이션 빌드
 
 
 
@@ -29,6 +33,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTgwNzY0MTI0OSwtMTM5Mzk5Nzc3MywtMT
+eyJoaXN0b3J5IjpbMTczNDcwNzgzNywtMTM5Mzk5Nzc3MywtMT
 AyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNzNdfQ==
 -->
