--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -19,8 +19,9 @@
 
 ## 메이븐 빌드의 기본 디렉터리 구조
 
-> 메이븐을 사용하려면 프로젝트를 어떻게 구성해야 하는가?
+![enter image description here](https://p7.hiclipart.com/preview/980/890/407/apache-maven-convention-over-configuration-apache-ant-directory-structure-coc.jpg)
 
+모든 제품 패키지 구조는 src/main/java 디렉터리 하위에 있다.
 
 ## 메이븐 빌드의 생명주기 
 
@@ -35,6 +36,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjk1NzEyNDgwLC0xMzkzOTk3NzczLC0xMD
-I0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMz
+kzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4
+NDM3M119
 -->
