--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -21,7 +21,7 @@
 
 ![enter image description here](https://p7.hiclipart.com/preview/980/890/407/apache-maven-convention-over-configuration-apache-ant-directory-structure-coc.jpg)
 
-모든 제품 패키지 구조는 src/main/java 디렉터리 하위에 있다. 
+모든 제품 패키지 구조는 src/main/java 디렉터리 하위에 있다. 이 구조의 모든 클래스는 실행할때 클래스 패스 상에 있을 것이다. 
 
 ## 메이븐 빌드의 생명주기 
 
@@ -36,7 +36,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQyMzk3MzA4NSwtMTI0NzU3NzAxNSwyOT
-U3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0
-NjU0NjcsMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbOTI0MTIzMjc0LC0xMjQ3NTc3MDE1LDI5NT
+cxMjQ4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2
+NTQ2NywzNTYxODQzNzNdfQ==
 -->
