--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -23,6 +23,8 @@
 
 모든 제품 패키지 구조는 src/main/java 디렉터리 하위에 있다. 이 구조의 모든 클래스는 실행할때 클래스 패스 상에 있을 것이다. 
 
+클래스 패스에 다른 파일들도 넣을 수 있다. 이 파일들은 src/main/resources 디렉터리 안에 있다. 
+
 ## 메이븐 빌드의 생명주기 
 
 ## 메이븐 애플리케이션 빌드
@@ -36,7 +38,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTI0MTIzMjc0LC0xMjQ3NTc3MDE1LDI5NT
-cxMjQ4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2
-NTQ2NywzNTYxODQzNzNdfQ==
+eyJoaXN0b3J5IjpbLTE4MzMwMzYwNDYsLTEyNDc1NzcwMTUsMj
+k1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkw
+NDY1NDY3LDM1NjE4NDM3M119
 -->
