books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -23,7 +23,7 @@
 
 모든 제품 패키지 구조는 src/main/java 디렉터리 하위에 있다. 이 구조의 모든 클래스는 실행할때 클래스 패스 상에 있을 것이다. 
 
-클래스 패스에 다른 파일들도 넣을 수 있다. 이 파일들은 src/main/resources 디렉터리 안에 있다. 
+클래스 패스에 다른 파일들도 넣을 수 있다. 이 파일들은 src/main/resources 디렉터리 안에 있다. 여기에는 일반적으로 설정 파일들이 들어간다. 스프링 애플리케이션 컨텍스트의 설정 뿐만 아니라 모든 properties 파일이 포함될 수 있다. 
 
 ## 메이븐 빌드의 생명주기 
 
@@ -38,7 +38,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MzMwMzYwNDYsLTEyNDc1NzcwMTUsMj
-k1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkw
-NDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTM4MDg4NTEyNiwtMTI0NzU3NzAxNSwyOT
+U3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0
+NjU0NjcsMzU2MTg0MzczXX0=
 -->
