books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -25,6 +25,8 @@
 
 클래스 패스에 다른 파일들도 넣을 수 있다. 이 파일들은 src/main/resources 디렉터리 안에 있다. 여기에는 일반적으로 설정 파일들이 들어간다. 스프링 애플리케이션 컨텍스트의 설정 뿐만 아니라 모든 properties 파일이 포함될 수 있다. 
 
+test 패키지 하위는 테스트용 설정 같은 테스트 코드로 추가할 수 있으며, 이러한 코드는 test/main/java와 test/main/resources에 두면 된다. 
+
 ## 메이븐 빌드의 생명주기 
 
 ## 메이븐 애플리케이션 빌드
@@ -38,7 +40,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM4MDg4NTEyNiwtMTI0NzU3NzAxNSwyOT
+eyJoaXN0b3J5IjpbMTEwNTU1NjcwMiwtMTI0NzU3NzAxNSwyOT
 U3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0
 NjU0NjcsMzU2MTg0MzczXX0=
 -->
