books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -37,7 +37,7 @@ clean
 : target 디렉터리를 지워서 이전에 빌드된 파일들을 없앤다. 이는 mvn clean 같은 빌드 상태를 명시해서 초기화하거나 항상 실행되도록 POM을 정의하지 않으면 다음 상태가 되기 전에는 실행하지 않는다.
   
 validate
-: pom.xml파일이 메이븐의 빌드 파일용 XML을 따르는지 확인한다. 
+: pom.xml파일이 메이븐의 빌드 파일용 XML을 따르는지 확인한다. pom.xml 파일이 올바른 검증에 실패한다면 빌드는 메이븐 애플리케이션 초기화를 하기 전에 실패할 것ㅇ
 
 
 -> compile
@@ -64,7 +64,7 @@ validate
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM4MDUyMjg1LC0xMjQ3NTc3MDE1LDI5NT
+eyJoaXN0b3J5IjpbOTQ3NDg3NTAzLC0xMjQ3NTc3MDE1LDI5NT
 cxMjQ4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2
 NTQ2NywzNTYxODQzNzNdfQ==
 -->
