--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -37,11 +37,13 @@ clean
 : target 디렉터리를 지워서 이전에 빌드된 파일들을 없앤다. 이는 mvn clean 같은 빌드 상태를 명시해서 초기화하거나 항상 실행되도록 POM을 정의하지 않으면 다음 상태가 되기 전에는 실행하지 않는다.
   
 validate
-: pom.xml파일이 메이븐의 빌드 파일용 XML을 따르는지 확인한다. pom.xml 파일이 올바른 검증에 실패한다면 빌드는 메이븐 애플리케이션 초기화를 하기 전에 실패할 것ㅇ
+: pom.xml파일이 메이븐의 빌드 파일용 XML을 따르는지 확인한다. pom.xml 파일이 올바른 검증에 실패한다면 빌드는 메이븐 애플리케이션 초기화를 하기 전에 실패할 것이다.
 
+compile
+: 모든 정의된 의존성을 가져오고, 코드를 컴파일하고, 모든 클래스 파일을 target/classes 디렉터리에 빌드한다. 
 
--> compile
--> test
+test
+: test 디렉터리에 있는 클래스들을 컴파일 하고 디렉터리에 있는 모든 단위테스트 또는 통합 테스트용 
 -> package
 -> install
 
@@ -64,7 +66,7 @@ validate
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTQ3NDg3NTAzLC0xMjQ3NTc3MDE1LDI5NT
-cxMjQ4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2
-NTQ2NywzNTYxODQzNzNdfQ==
+eyJoaXN0b3J5IjpbLTE1NjIzMDU0MzYsLTEyNDc1NzcwMTUsMj
+k1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkw
+NDY1NDY3LDM1NjE4NDM3M119
 -->
