books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -43,8 +43,10 @@ compile
 : 모든 정의된 의존성을 가져오고, 코드를 컴파일하고, 모든 클래스 파일을 target/classes 디렉터리에 빌드한다. 
 
 test
-: test 디렉터리에 있는 클래스들을 컴파일 하고 디렉터리에 있는 모든 단위테스트 또는 통합 테스트용 
--> package
+: test 디렉터리에 있는 클래스들을 컴파일 하고 디렉터리에 있는 모든 단위테스트 또는 통합 테스트용 코드를 실행한다. 기본적으로 실패하는 모든 단위 테스트는 빌드 실패가 된다. 
+
+package
+: test 상태가 성공적으로 실행된 다음 
 -> install
 
 어떤 빌드 결과물은 프로젝트 루트의 target이라는 디렉터리에 저장된다. 
@@ -66,7 +68,7 @@ test
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NjIzMDU0MzYsLTEyNDc1NzcwMTUsMj
+eyJoaXN0b3J5IjpbLTE3NjczNDY0MjAsLTEyNDc1NzcwMTUsMj
 k1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkw
 NDY1NDY3LDM1NjE4NDM3M119
 -->
