books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -46,7 +46,7 @@ test
 : test 디렉터리에 있는 클래스들을 컴파일 하고 디렉터리에 있는 모든 단위테스트 또는 통합 테스트용 코드를 실행한다. 기본적으로 실패하는 모든 단위 테스트는 빌드 실패가 된다. 
 
 package
-: test 상태가 성공적으로 실행된 다음 
+: test 상태가 성공적으로 실행된 다음에 실행되며 WAR나 JAR파일 같은 결과물을 생성한다. 파일은 target 디렉터리 루트에 저장되는데, 독립적인 파일이 아니다. 왜냐하면 기본적으로 모든 의존 라이브러리를 내장하지 않고 있고 의존성은 여전히 클래스 패으세 포
 -> install
 
 어떤 빌드 결과물은 프로젝트 루트의 target이라는 디렉터리에 저장된다. 
@@ -68,7 +68,7 @@ package
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NjczNDY0MjAsLTEyNDc1NzcwMTUsMj
-k1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkw
-NDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTE2OTg1OTgxOTIsLTE3NjczNDY0MjAsLT
+EyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0
+MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
 -->
