--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -46,8 +46,10 @@ test
 : test 디렉터리에 있는 클래스들을 컴파일 하고 디렉터리에 있는 모든 단위테스트 또는 통합 테스트용 코드를 실행한다. 기본적으로 실패하는 모든 단위 테스트는 빌드 실패가 된다. 
 
 package
-: test 상태가 성공적으로 실행된 다음에 실행되며 WAR나 JAR파일 같은 결과물을 생성한다. 파일은 target 디렉터리 루트에 저장되는데, 독립적인 파일이 아니다. 왜냐하면 기본적으로 모든 의존 라이브러리를 내장하지 않고 있고 의존성은 여전히 클래스 패으세 포
--> install
+: test 상태가 성공적으로 실행된 다음에 실행되며 WAR나 JAR파일 같은 결과물을 생성한다. 파일은 target 디렉터리 루트에 저장되는데, 독립적인 파일이 아니다. 왜냐하면 기본적으로 모든 의존 라이브러리를 내장하지 않고 있고 의존성은 여전히 클래스 패스에 포함되어 있어야 하기 때문이다. 이 상태로 제한되는 골은 packaging 태그에 의존한다. jar:jar 골이 실행되고, war로 설정되면 war:war 골이 실행된다. 
+
+install
+: 빌드된 결과물을 내부 메이븐 저장소로 보낸다. 대게 $Home$
 
 어떤 빌드 결과물은 프로젝트 루트의 target이라는 디렉터리에 저장된다. 
 
@@ -68,7 +70,7 @@ package
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTg1OTgxOTIsLTE3NjczNDY0MjAsLT
-EyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0
-MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
+eyJoaXN0b3J5IjpbLTcyODAwOTY0NCwtMTc2NzM0NjQyMCwtMT
+I0NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQz
+Mjk0OTIsLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
 -->
