--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -49,9 +49,10 @@ package
 : test 상태가 성공적으로 실행된 다음에 실행되며 WAR나 JAR파일 같은 결과물을 생성한다. 파일은 target 디렉터리 루트에 저장되는데, 독립적인 파일이 아니다. 왜냐하면 기본적으로 모든 의존 라이브러리를 내장하지 않고 있고 의존성은 여전히 클래스 패스에 포함되어 있어야 하기 때문이다. 이 상태로 제한되는 골은 packaging 태그에 의존한다. jar:jar 골이 실행되고, war로 설정되면 war:war 골이 실행된다. 
 
 install
-: 빌드된 결과물을 내부 메이븐 저장소로 보낸다. 대게 $Home$
+: 빌드된 결과물을 내부 메이븐 저장소로 보낸다. 대게 $HOME/.m2/repository$ 디렉터리에 위치한다. 내부적으로 실행되는 메이븐 빌드가 하나 이상 있다면 새로운 결과물은 해당 빌드를 이용할 수 있다. 
 
-어떤 빌드 결과물은 프로젝트 루트의 target이라는 디렉터리에 저장된다. 
+마지막 단계는 deploy
+
 
 
 
@@ -70,7 +71,7 @@ install
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcyODAwOTY0NCwtMTc2NzM0NjQyMCwtMT
+eyJoaXN0b3J5IjpbLTM5MDc0MzI3MSwtMTc2NzM0NjQyMCwtMT
 I0NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQz
 Mjk0OTIsLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
 -->
