books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -51,7 +51,7 @@ package
 install
 : 빌드된 결과물을 내부 메이븐 저장소로 보낸다. 대게 $HOME/.m2/repository$ 디렉터리에 위치한다. 내부적으로 실행되는 메이븐 빌드가 하나 이상 있다면 새로운 결과물은 해당 빌드를 이용할 수 있다. 
 
-마지막 단계는 deploy
+마지막 단계는 deploy이다. 이 단계에서는 대게 마무리된 결과물을 배포하기 위한 장소가 어딘지 정의하는 추가 설정이 좀 더 필요하다. 배포 위치는 일반적으로 Artifactory나 Nexus 같은 결과물 저장소다. 
 
 
 
@@ -71,7 +71,7 @@ install
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM5MDc0MzI3MSwtMTc2NzM0NjQyMCwtMT
-I0NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQz
-Mjk0OTIsLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbLTEyOTA4ODk4NjQsLTE3NjczNDY0MjAsLT
+EyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0
+MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
 -->
