books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -53,10 +53,8 @@ install
 
 마지막 단계는 deploy이다. 이 단계에서는 대게 마무리된 결과물을 배포하기 위한 장소가 어딘지 정의하는 추가 설정이 좀 더 필요하다. 배포 위치는 일반적으로 Artifactory나 Nexus 같은 결과물 저장소다. 이 저장소들은 빌드를 위한 의존 결과물을 다운로드할 수 있는 전형적인 공간으로, 완벽한 테스트 환경에 빌드를 설치하기 위해 머무르는 임시 공간의 역할을 주로 한다. 
 
-
-
-
 ## 메이븐 애플리케이션 빌드
+
 
 ## 결과물 애플리케이션간 공유
 
@@ -67,8 +65,8 @@ install
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjI0MjI3MDgsLTEyOTA4ODk4NjQsLT
-E3NjczNDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkz
-OTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4ND
-M3M119
+eyJoaXN0b3J5IjpbNTQ5NzU5Nzg0LC0xMjkwODg5ODY0LC0xNz
+Y3MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMjQ4MCwtMTM5Mzk5
+Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNz
+NdfQ==
 -->
