books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -55,6 +55,8 @@ install
 
 ## 메이븐 애플리케이션 빌드
 
+메이븐 빌드의 정의는 pom.xml에 설정되는데, 이 파리으
+
 
 ## 결과물 애플리케이션간 공유
 
@@ -65,8 +67,8 @@ install
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQ5NzU5Nzg0LC0xMjkwODg5ODY0LC0xNz
-Y3MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMjQ4MCwtMTM5Mzk5
-Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNz
-NdfQ==
+eyJoaXN0b3J5IjpbMTA5OTk1NzA5NSwtMTI5MDg4OTg2NCwtMT
+c2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5
+OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0NjU0NjcsMzU2MTg0Mz
+czXX0=
 -->
