books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -55,7 +55,15 @@ install
 
 ## 메이븐 애플리케이션 빌드
 
-메이븐 빌드의 정의는 pom.xml에 설정되는데, 이 파리으
+메이븐 빌드의 정의는 pom.xml에 설정되는데, 이 파일은 프로젝트의 루트 디렉터리에 있다. 메이븐은 애플리케이션을 어떻게 빌드할지 알려주는 명령으로 이 파일을 사용한다.
+
+pom.xml
+```
+<project>
+	<modelVersion>
+
+</project>
+```
 
 
 ## 결과물 애플리케이션간 공유
@@ -67,8 +75,8 @@ install
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA5OTk1NzA5NSwtMTI5MDg4OTg2NCwtMT
-c2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5
-OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0NjU0NjcsMzU2MTg0Mz
-czXX0=
+eyJoaXN0b3J5IjpbLTEwNjEzNzkwNDQsLTEyOTA4ODk4NjQsLT
+E3NjczNDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkz
+OTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4ND
+M3M119
 -->
