books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -60,7 +60,10 @@ install
 pom.xml
 ```
 <project>
-	<modelVersion>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>come.wiley</groupdId>
+	<groupId>come.wiley</groupdId>
+	<groupId>come.wiley</groupdId>
 
 </project>
 ```
@@ -75,8 +78,8 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjEzNzkwNDQsLTEyOTA4ODk4NjQsLT
-E3NjczNDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkz
-OTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4ND
-M3M119
+eyJoaXN0b3J5IjpbLTk3ODcyNDE1NSwtMTA2MTM3OTA0NCwtMT
+I5MDg4OTg2NCwtMTc2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3
+MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0Nj
+U0NjcsMzU2MTg0MzczXX0=
 -->
