books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -62,8 +62,9 @@ pom.xml
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>come.wiley</groupdId>
-	<groupId>come.wiley</groupdId>
-	<groupId>come.wiley</groupdId>
+	<artifactId>come.wiley</artifactId>
+	<version>come.wiley</version>
+	<packaging>jar</packaging>
 
 </project>
 ```
@@ -78,8 +79,8 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3ODcyNDE1NSwtMTA2MTM3OTA0NCwtMT
-I5MDg4OTg2NCwtMTc2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3
-MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0Nj
-U0NjcsMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbLTEzMTQzNDU5MzUsLTEwNjEzNzkwNDQsLT
+EyOTA4ODk4NjQsLTE3NjczNDY0MjAsLTEyNDc1NzcwMTUsMjk1
+NzEyNDgwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwND
+Y1NDY3LDM1NjE4NDM3M119
 -->
