books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -70,8 +70,14 @@ pom.xml
 		<dependency>
 			<groupId>commons-io<groupId>
 			<artifactId>commons-io<artifactId>
-			
+			<version>1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework<groupId>
+			<artifactId>spring-core<artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
@@ -87,8 +93,9 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY0MzMzNTQ3MSwtMTMxNDM0NTkzNSwtMT
-A2MTM3OTA0NCwtMTI5MDg4OTg2NCwtMTc2NzM0NjQyMCwtMTI0
-NzU3NzAxNSwyOTU3MTI0ODAsLTEzOTM5OTc3NzMsLTEwMjQzMj
-k0OTIsLTEyOTA0NjU0NjcsMzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbMTMwOTU5MzY0LC02NDMzMzU0NzEsLTEzMT
+QzNDU5MzUsLTEwNjEzNzkwNDQsLTEyOTA4ODk4NjQsLTE3Njcz
+NDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkzOTk3Nz
+czLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
+
 -->
