books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -75,7 +75,7 @@ pom.xml
 		<dependency>
 			<groupId>org.springframework<groupId>
 			<artifactId>spring-core<artifactId>
-			<version>1.4</version>
+			<version>3.0.0.RELEASE</version>
 		</dependency>
 
 	</dependencies>
@@ -93,9 +93,9 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMwOTU5MzY0LC02NDMzMzU0NzEsLTEzMT
-QzNDU5MzUsLTEwNjEzNzkwNDQsLTEyOTA4ODk4NjQsLTE3Njcz
-NDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyNDgwLC0xMzkzOTk3Nz
-czLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3LDM1NjE4NDM3M119
-
+eyJoaXN0b3J5IjpbLTE5ODc2MDk4MSwtNjQzMzM1NDcxLC0xMz
+E0MzQ1OTM1LC0xMDYxMzc5MDQ0LC0xMjkwODg5ODY0LC0xNzY3
+MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMjQ4MCwtMTM5Mzk5Nz
+c3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNzNd
+fQ==
 -->
