books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -77,8 +77,14 @@ pom.xml
 			<artifactId>spring-core<artifactId>
 			<version>3.0.0.RELEASE</version>
 		</dependency>
-
+		<dependency>
+			<groupId>jnit<groupId>
+			<artifactId>jnit<artifactId>
+			<version>4.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
+	<build>
 
 </project>
 ```
@@ -93,9 +99,9 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODc2MDk4MSwtNjQzMzM1NDcxLC0xMz
-E0MzQ1OTM1LC0xMDYxMzc5MDQ0LC0xMjkwODg5ODY0LC0xNzY3
-MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMjQ4MCwtMTM5Mzk5Nz
-c3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2NywzNTYxODQzNzNd
-fQ==
+eyJoaXN0b3J5IjpbLTE3MTU1NTI2NjYsLTE5ODc2MDk4MSwtNj
+QzMzM1NDcxLC0xMzE0MzQ1OTM1LC0xMDYxMzc5MDQ0LC0xMjkw
+ODg5ODY0LC0xNzY3MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMj
+Q4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2
+NywzNTYxODQzNzNdfQ==
 -->
