books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -85,6 +85,13 @@ pom.xml
 		</dependency>
 	</dependencies>
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apached.maven.plugins</groupId>
+				<artifactId>maven.</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
 ```
@@ -99,9 +106,9 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MTU1NTI2NjYsLTE5ODc2MDk4MSwtNj
-QzMzM1NDcxLC0xMzE0MzQ1OTM1LC0xMDYxMzc5MDQ0LC0xMjkw
-ODg5ODY0LC0xNzY3MzQ2NDIwLC0xMjQ3NTc3MDE1LDI5NTcxMj
-Q4MCwtMTM5Mzk5Nzc3MywtMTAyNDMyOTQ5MiwtMTI5MDQ2NTQ2
-NywzNTYxODQzNzNdfQ==
+eyJoaXN0b3J5IjpbNjQxNDM2OTIxLC0xOTg3NjA5ODEsLTY0Mz
+MzNTQ3MSwtMTMxNDM0NTkzNSwtMTA2MTM3OTA0NCwtMTI5MDg4
+OTg2NCwtMTc2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3MTI0OD
+AsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0NjU0Njcs
+MzU2MTg0MzczXX0=
 -->
