books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -88,7 +88,9 @@ pom.xml
 		<plugins>
 			<plugin>
 				<groupId>org.apached.maven.plugins</groupId>
-				<artifactId>maven.</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -106,7 +108,7 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQxNDM2OTIxLC0xOTg3NjA5ODEsLTY0Mz
+eyJoaXN0b3J5IjpbNjIzNDEzMDU0LC0xOTg3NjA5ODEsLTY0Mz
 MzNTQ3MSwtMTMxNDM0NTkzNSwtMTA2MTM3OTA0NCwtMTI5MDg4
 OTg2NCwtMTc2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3MTI0OD
 AsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0NjU0Njcs
