books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -90,13 +90,15 @@ pom.xml
 				<groupId>org.apached.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
 ```
+POM은 크게 **프로젝트 정의, 빌드용 의존성, 특정 빌드 전용 플러그인** 세가지 영역으로 구분할 수 있다. 
 
 
 ## 결과물 애플리케이션간 공유
@@ -108,9 +110,9 @@ pom.xml
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjIzNDEzMDU0LC0xOTg3NjA5ODEsLTY0Mz
-MzNTQ3MSwtMTMxNDM0NTkzNSwtMTA2MTM3OTA0NCwtMTI5MDg4
-OTg2NCwtMTc2NzM0NjQyMCwtMTI0NzU3NzAxNSwyOTU3MTI0OD
-AsLTEzOTM5OTc3NzMsLTEwMjQzMjk0OTIsLTEyOTA0NjU0Njcs
-MzU2MTg0MzczXX0=
+eyJoaXN0b3J5IjpbLTEyMzE5MjA2NSwtMTk4NzYwOTgxLC02ND
+MzMzU0NzEsLTEzMTQzNDU5MzUsLTEwNjEzNzkwNDQsLTEyOTA4
+ODk4NjQsLTE3NjczNDY0MjAsLTEyNDc1NzcwMTUsMjk1NzEyND
+gwLC0xMzkzOTk3NzczLC0xMDI0MzI5NDkyLC0xMjkwNDY1NDY3
+LDM1NjE4NDM3M119
 -->
