algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -1,17 +1,15 @@
 
 # 4장 알고리즘의 시간 복잡도 분석(1)
 
-알고리즘을 평가하는 두 가지 기준 :
+알고리즘을 평가하는 두 가지 기준
 
 * 시간 : 알고리즘이 적은 시간을 사용한다는 것은 더 빠르게 동작한다는 이야기.
 * 공간 : 더 적은 용량의 메모리를 사용한다는 이야기. 알고리즘이 아무리 빠르더라도 너무 많은 메모리 공간을 사용하면 수행이 불가
 
 두 기준은 서로 상충하는 경우가 많다. 메모리 사용량을 늘려 속도를 높이거나, 속도를 희생해서 메모리 사용량을 줄이는 알고리즘들도 있다. 보통은 속도를 중시하는 경우가 많다.
 
-## 4.1 도입 
 
-프로그램의 실행 시간은 알고리즘의 속도로 일반적으로 이야기하는 기준이 되기에는 부적합
--> 프로그래밍 언어, 하드웨어, 운영체제, 컴파일러 등 많은 요소에 의해서 바뀔수 있다. 
+프로그램의 실행 시간은 프로그래밍 언어, 하드웨어, 운영체제, 컴파일러 많은 요소에 의해서 바뀔수 있다. 
 -> 입력크기, 특성에 따라 수행시간이 크게 달라진다.
 
 다수의 항목 중에 특정 항목이 전체의 대소를 좌지우지 한다는 것을 지배한다(dominate)라고 표현한다.  알고리즘 수행 시간을 지배하는 것은 일반적으로 반복문이다.
@@ -224,5 +222,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX0=
+eyJoaXN0b3J5IjpbMTI2NjYxMjIzNiwtMTU5MjA0MjAxNCwtMj
+c2OTg5MTJdfQ==
 -->
