--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -8,7 +8,7 @@
 
 두 기준은 서로 상충하는 경우가 많다. 메모리 사용량을 늘려 속도를 높이거나, 속도를 희생해서 메모리 사용량을 줄이는 알고리즘들도 있다. 보통은 속도를 중시하는 경우가 많다.
 
-사실 한 프로그램의 실행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 
+사실 한 프로그램의 실행 시간은 프로그래밍 언어, 하드웨어, 컴파일러 등의 환경적인 요소로 크게 변화할 수 있다. 심지어 알고리즘적으로는 
 
 알고리즘적으로는 입력크기,  입력의 특성 등  많은 요소에 의해 변화한다.
 
@@ -222,6 +222,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Nj
-k4OTEyXX0=
+eyJoaXN0b3J5IjpbLTExNjYzNzE3NDMsNTU4Njg4NjQsLTE1OT
+IwNDIwMTQsLTI3Njk4OTEyXX0=
 -->
