--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -13,7 +13,7 @@
 ## 4.2 선형 시간 알고리즘 
 
 선형시간(linear) 알고리즘
-: 입력 데이터 크기에 따라 수행시간이 1:1로 비례한다. 
+: 입력 데이터 크기에 1:1로 비례하는 수행시간을 보이는 알고리즘
 
 이동 평균(moving average) : 시간에 따라 변화하는 값들 관찰시 유용한 통계적 기준. 
 M - 이동 평균 : 가장 최근 마지막  M개의 관찰 값의 평균
@@ -219,6 +219,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMyMjc4NjIyOSw1NTg2ODg2NCwtMTU5Mj
-A0MjAxNCwtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbLTEzNjYwMjQyNDcsNTU4Njg4NjQsLTE1OT
+IwNDIwMTQsLTI3Njk4OTEyXX0=
 -->
