algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -15,8 +15,11 @@
 선형시간(linear) 알고리즘
 : 입력 데이터 크기에 1:1로 비례하는 수행시간을 보이는 알고리즘
 
+
+M-이동 평균(M-moving average)
+: 가장 최근 마지막  M개의 관찰 값의 평균
 이동 평균(moving average) : 시간에 따라 변화하는 값들 관찰시 유용한 통계적 기준. 
-M - 이동 평균 : 가장 최근 마지막  M개의 관찰 값의 평균
+
 
 for 문을 두번 사용해서 처리도 가능하다 
 ``` 
@@ -219,6 +222,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNjYwMjQyNDcsNTU4Njg4NjQsLTE1OT
-IwNDIwMTQsLTI3Njk4OTEyXX0=
+eyJoaXN0b3J5IjpbMjU1NTg4MzgzLC0xMzY2MDI0MjQ3LDU1OD
+Y4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
 -->
