algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -17,7 +17,7 @@
 
 
 M-이동 평균(M-moving average)
-: 가장 최근 마지막  M개의 관찰 값의 평균
+: 시계열 데이터(시간에 따라 변화하는 데이터)M일의 날짜 마다 관찰된  평균
 이동 평균(moving average) : 시간에 따라 변화하는 값들 관찰시 유용한 통계적 기준. 
 
 
@@ -222,6 +222,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjU1NTg4MzgzLC0xMzY2MDI0MjQ3LDU1OD
-Y4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
+eyJoaXN0b3J5IjpbLTUyNDc5Nzk5MiwtMTM2NjAyNDI0Nyw1NT
+g2ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ==
 -->
