algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -17,7 +17,7 @@
 
 
 M-이동 평균(M-moving average)
-: 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는 통계 기법. 일반적으로는 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 한
+: 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는 통계 기법. 일반적으로는 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 M-이동 평균 값이다.
 
 
 for 문을 두번 사용해서 처리도 가능하다 
@@ -221,6 +221,6 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY1MjExMjcsLTEzNjYwMjQyNDcsNTU4Nj
-g4NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX0=
+eyJoaXN0b3J5IjpbMjE5MjAzMTgxLC0xMzY2MDI0MjQ3LDU1OD
+Y4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
 -->
