algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -19,7 +19,7 @@
 M-이동 평균(M-moving average)
 : 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는 통계 기법. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
 
-M-이동평균을 계산하는건 for 문을 두번 사용해서 처리도 가능하다 
+M-이동평균을 계산하는건 이중 for 문을 
 ``` 
 N = data.size
 for(i = M-1; i < N) // M-1번째 데이터에서 부터 시작하여 N까지 처리, 최소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
@@ -220,7 +220,7 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE5Nzk1NTQ4NiwyMTkyMDMxODEsLTEzNj
-YwMjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEy
-XX0=
+eyJoaXN0b3J5IjpbNDMxMzQwNzEzLDIxOTIwMzE4MSwtMTM2Nj
+AyNDI0Nyw1NTg2ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJd
+fQ==
 -->
