algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -22,11 +22,14 @@ M-이동 평균(M-moving average)
 M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
 ``` 
 N = data.size;
-for(i = M-1; i < N) // M-1번째 데이터에서 부터 시작하여 N까지 처리, 최소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
+for(i = M-1; i < N){// M-1번째 데이터에서 부터 시작하여 N까지 처리,
+// 최소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
 partialSum =0;
-	for(j = 0; j < M; j++) // 평균을 구하기 위해 M개의 데이터를 처리
+	for(j = 0; j < M; j++){ // 평균을 구하기 위해 M개의 데이터를 처리
 	partialSum += Data[i-j];
 	average = partialSum / M;
+	}
+}
 ```
 
 그러나 이것을 개선이 가능하다. **아이디어는 중복된 계산을 없애는것**
@@ -220,7 +223,7 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NDY2OTE4NjcsMjE5MjAzMTgxLC0xMz
+eyJoaXN0b3J5IjpbLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMz
 Y2MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkx
 Ml19
 -->
