--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -21,8 +21,8 @@ M-이동 평균(M-moving average)
 
 M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
 ``` 
-N = data.size;
-for(base = M-1; base < N){// M-1번째 데이터에서 부터 시작하여 N까지 처리,
+N = Data.size;
+for(base = 0 + M-1; base < N){// M-1번째 데이터에서 부터 시작하여 N까지 처리,
 // 최소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
 partialSum =0;
 	for(j = 0; j < M; j++){ // 가장 최근 M일 
@@ -223,7 +223,8 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODU5MTI2MjMsLTc0MzA0NjE2NSwtMT
-Y3ODk5ODY5NywyMTkyMDMxODEsLTEzNjYwMjQyNDcsNTU4Njg4
-NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX0=
+eyJoaXN0b3J5IjpbLTY2OTUxMTA5MiwtMTk4NTkxMjYyMywtNz
+QzMDQ2MTY1LC0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAy
+NDI0Nyw1NTg2ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ
+==
 -->
