--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -22,8 +22,7 @@ M-이동 평균(M-moving average)
 M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
 ``` 
 N = Data.size;
-for(base = 0 + M-1; base < N){// M-1번째 데이터에서 부터 시작하여 N까지 처리,
-// 최소 (M-1) - 0 + 1 = M 최소 M개의 데이터를 처리
+for(base = 0 + M-1; base < N){// M-1번째 부터 시작하여 N까지 처리; 최근 M일을 계산하는데 초기 0~M-2일 까지는 계산하지 않는다.
 partialSum =0;
 	for(j = 0; j < M; j++){ // 가장 최근 M일 
 	partialSum += Data[base-j];
@@ -223,8 +222,7 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY2OTUxMTA5MiwtMTk4NTkxMjYyMywtNz
-QzMDQ2MTY1LC0xNjc4OTk4Njk3LDIxOTIwMzE4MSwtMTM2NjAy
-NDI0Nyw1NTg2ODg2NCwtMTU5MjA0MjAxNCwtMjc2OTg5MTJdfQ
-==
+eyJoaXN0b3J5IjpbMzUyNzA0NDU0LC0xOTg1OTEyNjIzLC03ND
+MwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2MDI0
+MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
 -->
