algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -23,10 +23,10 @@ M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
 ``` 
 N = Data.size;
 for(base = 0 + M-1; base < N){ // M-1번째 부터 시작하여 N까지 처리; 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
-sum =0;
+sum = 0;
 	for(j = 0; j < M; j++){ // 가장 최근 M일 
-	partialSum += Data[base-j];
-	average = partialSum / M;
+	sum += Data[base-j];
+	average = sum / M;
 	}
 }
 ```
@@ -222,7 +222,8 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTc1ODMzNTc5LC0xOTg1OTEyNjIzLC03ND
-MwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2MDI0
-MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
+eyJoaXN0b3J5IjpbLTE5NTM3OTUxMjUsLTE5ODU5MTI2MjMsLT
+c0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTkyMDMxODEsLTEzNjYw
+MjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX
+0=
 -->
