algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -23,15 +23,14 @@ M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
 ``` 
 N = Data.size;
 for(base = 0 + M-1; base < N){ // M-1번째 부터 시작하여 N까지 처리; 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
-sum = 0;
+int sum = 0;
 	for(j = 0; j < M; j++){ // 가장 최근 M일 
 	sum += Data[base-j];
-	average = sum / M;
 	}
+double average = sum / M;
 }
 ```
-
-그러나 이것을 개선이 가능하다. **아이디어는 중복된 계산을 없애는것**
+ 이중 for문은 개선이 가능하다. 
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
 ...
@@ -222,8 +221,8 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTM3OTUxMjUsLTE5ODU5MTI2MjMsLT
-c0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTkyMDMxODEsLTEzNjYw
-MjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4OTEyXX
-0=
+eyJoaXN0b3J5IjpbMTc0OTU2MDg3NywtMTk1Mzc5NTEyNSwtMT
+k4NTkxMjYyMywtNzQzMDQ2MTY1LC0xNjc4OTk4Njk3LDIxOTIw
+MzE4MSwtMTM2NjAyNDI0Nyw1NTg2ODg2NCwtMTU5MjA0MjAxNC
+wtMjc2OTg5MTJdfQ==
 -->
