algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -30,7 +30,7 @@ int sum = 0;
 double average = sum / M;
 }
 ```
- 이중 for문은 개선이 가능하다. 
+M-이중평균은 이중 for문이 아니라 바로 중복된 계산을 없애는것. 
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
 ...
@@ -221,8 +221,8 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc0OTU2MDg3NywtMTk1Mzc5NTEyNSwtMT
-k4NTkxMjYyMywtNzQzMDQ2MTY1LC0xNjc4OTk4Njk3LDIxOTIw
-MzE4MSwtMTM2NjAyNDI0Nyw1NTg2ODg2NCwtMTU5MjA0MjAxNC
-wtMjc2OTg5MTJdfQ==
+eyJoaXN0b3J5IjpbLTIyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOT
+g1OTEyNjIzLC03NDMwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAz
+MTgxLC0xMzY2MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC
+0yNzY5ODkxMl19
 -->
