algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -19,7 +19,7 @@
 M-이동 평균(M-moving average)
 : 시계열 데이터(시간에 따라 변화하는 데이터)를 관찰하는 통계 기법. 일반적으로 특정 날짜를 기준으로 가장 최근 M일의 데이터의 평균이 그 날짜에 해당하는 M-이동 평균이다.
 
-M-이동평균을 계산하는건 이중 for 문을 이용하면 간단하다.
+M-이동평균을 계산은 이중 for 문으로 간단히 구현할 수 있다.
 ``` 
 N = Data.size;
 for(base = 0 + M-1; base < N){ // M-1번째 부터 시작하여 N까지 처리; 최근 M일을 계산하는데 초기 0~M-2일까지는 계산하지 않는다.
@@ -30,7 +30,7 @@ int sum = 0;
 double average = sum / M;
 }
 ```
-M-이중평균은 이중 for문이 아니라 바로 중복된 계산을 없애는것. 
+
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
 ...
@@ -221,8 +221,8 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyMDY4OTU5LC0xOTUzNzk1MTI1LC0xOT
-g1OTEyNjIzLC03NDMwNDYxNjUsLTE2Nzg5OTg2OTcsMjE5MjAz
-MTgxLC0xMzY2MDI0MjQ3LDU1ODY4ODY0LC0xNTkyMDQyMDE0LC
-0yNzY5ODkxMl19
+eyJoaXN0b3J5IjpbMTY0NDU5ODEzMywtMjIwNjg5NTksLTE5NT
+M3OTUxMjUsLTE5ODU5MTI2MjMsLTc0MzA0NjE2NSwtMTY3ODk5
+ODY5NywyMTkyMDMxODEsLTEzNjYwMjQyNDcsNTU4Njg4NjQsLT
+E1OTIwNDIwMTQsLTI3Njk4OTEyXX0=
 -->
