algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -31,6 +31,8 @@ double average = sum / M;
 }
 ```
 
+사실 M-이동평균은 중복되는 계산을 줄임으로써 단일 for문으로 구할 수 있다. 
+
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
 ...
@@ -221,7 +223,7 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY0NDU5ODEzMywtMjIwNjg5NTksLTE5NT
+eyJoaXN0b3J5IjpbMTkyMzM0MTA3OCwtMjIwNjg5NTksLTE5NT
 M3OTUxMjUsLTE5ODU5MTI2MjMsLTc0MzA0NjE2NSwtMTY3ODk5
 ODY5NywyMTkyMDMxODEsLTEzNjYwMjQyNDcsNTU4Njg4NjQsLT
 E1OTIwNDIwMTQsLTI3Njk4OTEyXX0=
