algorithms/알고리즘의 시간복잡도 분석(1).md updated from https://stackedit.io/

--- a/algorithms/알고리즘의 시간복잡도 분석(1).md
+++ b/algorithms/알고리즘의 시간복잡도 분석(1).md
@@ -31,7 +31,7 @@ double average = sum / M;
 }
 ```
 
-사실 M-이동중평균은 중복되는 계산을 줄임으로써 단일 for문으로 구할 수 있을 계산할때 이중 for문이 아니라 한 for문으로도 계산이 가능하다.  이는 중복된 계산을 없애는것으로 가능하다. 
+사실 M-이동중평균은 중복되는 계산을 줄임으로써 단일 for문으로 계산이 가능하다.  
 
 0부터 M-1까지 데이터의 총합 : $Sum[0] = D[0] + D[1] + D[2] + ... + D[M-1]$
 1부터 M까지 데이터의 총합: $Sum[1] = D[1] + D[2] + ... + D[M]$
@@ -223,8 +223,9 @@ $f(N) = Ω(nlogn)$ : 최소 $nlogn$ 그리고 최대 $nlogn$시간 복잡도를 
 $O(N^3)$ 알고리즘 : 
 최대 입력 크기를 10000($10^4$)을 주면, 1억을 초과한다.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzU3NzM5NjI1LDE5MjMzNDEwNzgsLTIyMD
-Y4OTU5LC0xOTUzNzk1MTI1LC0xOTg1OTEyNjIzLC03NDMwNDYx
-NjUsLTE2Nzg5OTg2OTcsMjE5MjAzMTgxLC0xMzY2MDI0MjQ3LD
-U1ODY4ODY0LC0xNTkyMDQyMDE0LC0yNzY5ODkxMl19
+eyJoaXN0b3J5IjpbLTEwNzU5NTgxOCw3NTc3Mzk2MjUsMTkyMz
+M0MTA3OCwtMjIwNjg5NTksLTE5NTM3OTUxMjUsLTE5ODU5MTI2
+MjMsLTc0MzA0NjE2NSwtMTY3ODk5ODY5NywyMTkyMDMxODEsLT
+EzNjYwMjQyNDcsNTU4Njg4NjQsLTE1OTIwNDIwMTQsLTI3Njk4
+OTEyXX0=
 -->
