books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md updated from https://stackedit.io/

--- a/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
+++ b/books/programming-interview/java/CH19 빌드 도구 이용해 개발하기.md
@@ -1,4 +1,5 @@
 # Maven(메이븐 )
+
 사용하기 좋은 애플리케이션을 만드는 데는 자바 소스 코드를 잘 작성하는 것 이외에도 많은 라이브러리, 플러그인이 필요하다. 한 애플리케이션을 동작하는데 필요한 모든 자원 관리하고 빌드하는 도구의 필요성은 꾸준히 있었다. 
 
 >Maven이란?
@@ -116,24 +117,15 @@ deploy
 	</repository>
 </distributionManagement>
 ```
-
-repository와  snapshotRepository 태그가 있는데 하나는 배포용이고 하나는 스냅샷이다.  version 태그에 `-SNAPSHOT`이라는 접미사를 포함하면 이 결과물이 여전히 개발 중이고 안정화되지 않았다는 것을 말한다. deploy 골을 실행할때 `-SNAPSHOT` 태그가 붙어 있으면 스냅샷 빌드로 snapshotRepository 태그 안에 있는 URL 주소로 배포될 것이다. 안정된 버전은 -SNAPSHOT 접미사가 제거되어 deploy 골이 실행될때 repository 태그 안에 URL에 배포될 것이다.  
-
-
-대부분 프로젝트는 기본적으로 애플리케이션이 WAR나 JAR 파일로 배포될 것이다. 메이븐은 이들을 어떻게 빌드해야하는지 알고 있다.
-
-
-
-
-
+repository와  snapshotRepository 태그가 있는데 하나는 배포용이고 하나는 스냅샷이다.  version 태그에 `-SNAPSHOT`이라는 접미사를 포함하면 이 결과물이 여전히 개발 중이고 안정화되지 않았다는 것을 말한다. deploy 골을 실행할때 `-SNAPSHOT` 태그가 붙어 있으면 스냅샷 빌드로 snapshotRepository 태그 안에 있는 URL 주소로 배포될 것이다. `-SNAPSHOT` 접미사가 제거된 안정된 버전은 repository 태그 안에 URL에 배포될 것이다.  
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTU0OTQ1OTgsMTAzMzI2MDA0MywxMT
-cwOTI4NTYyLC0xNTA0NzQ0NzcyLC0xNTY3NjE4MjE2LC0xNjg4
-MTI4OTQxLDYyNDM4NzM0LC0xMjkxNTgzMzc4LDcwNDk0NzY4MS
-wtMjAzMDg2MDk3NywxNzMyNjU5NzI3LC0xOTgyMDgzNzcsMjA4
-MTYwNjU1MywtOTUwMTIwMDksMjEzMTgzODI2NiwtMTIzMTkyMD
-Y1LC0xOTg3NjA5ODEsLTY0MzMzNTQ3MSwtMTMxNDM0NTkzNSwt
-MTA2MTM3OTA0NF19
+eyJoaXN0b3J5IjpbLTExMzM5NjY0NSwxMDMzMjYwMDQzLDExNz
+A5Mjg1NjIsLTE1MDQ3NDQ3NzIsLTE1Njc2MTgyMTYsLTE2ODgx
+Mjg5NDEsNjI0Mzg3MzQsLTEyOTE1ODMzNzgsNzA0OTQ3NjgxLC
+0yMDMwODYwOTc3LDE3MzI2NTk3MjcsLTE5ODIwODM3NywyMDgx
+NjA2NTUzLC05NTAxMjAwOSwyMTMxODM4MjY2LC0xMjMxOTIwNj
+UsLTE5ODc2MDk4MSwtNjQzMzM1NDcxLC0xMzE0MzQ1OTM1LC0x
+MDYxMzc5MDQ0XX0=
 -->
