--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -2,12 +2,12 @@
 
 흔히 말하는 엔터프라이즈 시스템에서는 사용자와 직접 상호작용하는 웹 애플리케이션 뿐만 아니라 사용자와 무관하게 일정 주기마다 실행되야 하는 배치 애플리케이션도 필요하다. 
 
-## Batch?
+## Batch
 
 ## Spring Batch?
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODg4OTc3NjA3XX0=
+eyJoaXN0b3J5IjpbLTUzMzA0MDE1NCw4ODg5Nzc2MDddfQ==
 -->
