books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -4,10 +4,17 @@
 
 ## Batch
 
-## Spring Batch?
+일반적인 배치 처리는 두 가지 특징을 가진다.
+* 일정량의 데이터를 모아서 한번에 처리
+* 일정한 순서에 따라 처리가 수행된다.
+
+배치 처리는 응답성보다 시간당 처리량을 우선시 하는 처리 방식
+
+
+## Spring Batch
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUzMzA0MDE1NCw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTU2NTM2Mjk3MSw4ODg5Nzc2MDddfQ==
 -->
