books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -8,7 +8,16 @@
 * 일정량의 데이터를 모아서 한번에 처리
 * 일정한 순서에 따라 처리가 수행된다.
 
-배치 처리는 응답성보다 시간당 처리량을 우선시 하는 처리 방식
+배치 처리는 응답성보다 시간당 처리량을 우선시 하는 처리 방식이다. 말 그대로 수천건의 달하는 대량의 데이터를 단시간에 처리하는 모습을 보인다.
+
+일반적인 배치는 여러 다양한 기술을 조합해서 사용하는 경우가 많은데 일반적으로 아래 기술들을 많이 쓴다.
+
+*
+*
+*
+
+
+
 
 
 ## Spring Batch
@@ -16,5 +25,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU2NTM2Mjk3MSw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbLTk5NDE4Mjg3NSw4ODg5Nzc2MDddfQ==
 -->
