books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -16,6 +16,7 @@
 *
 *
 
+그러면 배치 처리 방식이 반드시 지켜야할 요건은 무엇일까? 물론 시스템에 따라 달라지겠지만 아래것이 대표적인 요건이다. 
 
 
 
@@ -25,5 +26,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk5NDE4Mjg3NSw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
