--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -12,7 +12,8 @@
 
 일반적인 배치는 여러 다양한 기술을 조합해서 사용하는 경우가 많은데 일반적으로 아래 기술들을 많이 쓴다.
 
-*
+잡 스케쥴러
+: 배치처리에서 하나의 실행 단위를 잡(JOB)이라 한다. 
 *
 *
 
@@ -26,6 +27,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzExMzg3NDksODU5NTU1NDYzLDg4OD
-k3NzYwN119
+eyJoaXN0b3J5IjpbMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OT
+U1NTQ2Myw4ODg5Nzc2MDddfQ==
 -->
