books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -13,7 +13,12 @@
 일반적인 배치는 여러 다양한 기술을 조합해서 사용하는 경우가 많은데 일반적으로 아래 기술들을 많이 쓴다.
 
 잡 스케쥴러
-: 배치처리에서 하나의 실행 단위를 잡(JOB)이라 한다. 
+: 배치처리에서 하나의 실행 단위를 잡(JOB)이라 한다. 보통 수백에서 수천개의 잡이 관리되는데, 이러한 잡을 원할이 실행되기 위해서는 연관관계를 정의하거나 실행 스케쥴을 관리하는 기능이 필요하다.
+
+자바와 같은 프로그래밍 언어
+:  프로그래밍 언어로 별도의 
+
+
 *
 *
 
@@ -27,6 +32,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjkxODkxMjgyLC0xNzMxMTM4NzQ5LDg1OT
-U1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbNjg0NDQxMzQ5LDI5MTg5MTI4MiwtMTczMT
+EzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3XX0=
 -->
