--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -15,6 +15,8 @@
 잡 스케쥴러
 : 배치처리에서 하나의 실행 단위를 잡(JOB)이라 한다. 보통 수백에서 수천개의 잡이 관리되는데, 이러한 잡을 원할이 실행되기 위해서는 연관관계를 정의하거나 실행 스케쥴을 관리하는 기능이 필요하다.
 
+셀 스크립트
+: 셀 스크립트로 하나의 잡을 처리할 수도 있다. 
 
 자바와 같은 프로그래밍 언어
 :  프로그래밍 언어로 별도의 애플리케이션을 개발해 잡을 처리 할 수도 있다.  비교적 복잡한 비즈니스 로직을 처리한다거나 파일이나 데이터베이스 데이터 가공 처리등에 활용된다. 
@@ -33,6 +35,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMzc0MDIxNTcsMjkxODkxMjgyLC0xNz
-MxMTM4NzQ5LDg1OTU1NTQ2Myw4ODg5Nzc2MDddfQ==
+eyJoaXN0b3J5IjpbMTYzNzkzNDY1NiwyOTE4OTEyODIsLTE3Mz
+ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
 -->
