--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -24,7 +24,7 @@
 그러면 배치 처리 방식이 반드시 지켜야할 요건은 무엇일까? 물론 시스템에 따라 달라지겠지만 아래것이 대표적인 요건이다.  
 
 * 대량의 데이터를 제한된 리소스로 효율적으로 처리해야한다.
-	* 
+	* 시간당 처리량과도 관련이 있지만 대량의 데이터를 모아 처리하면 처리 시간을 줄일 수 있다. 일정량 내용을 모아서 처리할때는 트랜잭션 처리 역시 일정량 단위로 시작 및 종료할 수 있어야 한다. 또 데이터가 너무 많으면 일정 단위나 
 * 가능한 한 중단된 작업을 다시 계속할 수 있어야 한다.
 
 
@@ -35,6 +35,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzNDM1MjE1NiwyOTE4OTEyODIsLTE3Mz
-ExMzg3NDksODU5NTU1NDYzLDg4ODk3NzYwN119
+eyJoaXN0b3J5IjpbLTM4MjEwNjg5NCwxNDM0MzUyMTU2LDI5MT
+g5MTI4MiwtMTczMTEzODc0OSw4NTk1NTU0NjMsODg4OTc3NjA3
+XX0=
 -->
